--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./style.css" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./logo.ico" />
+    
     <!-- Manifest for PWA -->
     <link rel="manifest" href="./manifest.json" />
 
