update: brand_name and brand logo

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <header class="site-header" id="top">
       <nav class="navbar container" aria-label="Primary">
         <a class="brand" href="#top" aria-label="Home">
-          <img src="./avatar.jpg" alt="Tran Nhat Tan" class="brand__avatar" loading="eager" />
+          <img src="./logo.ico" alt="Tran Nhat Tan" class="brand__avatar" loading="eager" />
           <div class="brand__info">
-            <span class="brand__name">Tran Nhat Tan</span>
+            <span class="brand__name">Vai Bờ Coder</span>
             <span class="brand__role">Software Developer</span>
           </div>
         </a>
